tests/NormalTests/paczka1/small_fuzzy/67061062.err
Error in line 1: KGMsPrnmph S621 6,5
Error in line 8: TNsEV1r0 S490 25,5
